Fix: cta-button white space to nowrap

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -84,6 +84,7 @@
         display: block;
         margin: 20px;
         text-align: center;
+        white-space: nowrap;
     }
     .navbar .nav-toggler {
         display: block;
